# flappyc

./: CMakeLists.txt  files.h  flappy.cpp  flappy.h  main.cpp  tests.cpp
doctest/: doctest.h
